@@ -1,2 +1,2 @@
-Dist-Zilla-Plugin-LocalInstall*
+Dist-Zilla-Plugin-InstallRelease*
 .build
