@@ -1,36 +1,10 @@
-name                = Dist-Zilla-Plugin-LocalInstall
+name                = Dist-Zilla-Plugin-InstallRelease
 author              = Mike Doherty <doherty@cpan.org>
 license             = GPL_3
 copyright_holder    = Mike Doherty
 copyright_year      = 2100
 
-[Git::Check]
-[@Filter]
--bundle = @Basic
--remove = Readme
--remove = ExtraTests
+[@DOHERTY]
+version_regexp = ^v(.+)$
+tag_format = v%v
 
-[AutoPrereqs]
-[MinimumPerl]
-[Repository]
-[Bugtracker]
-:version = 1.102670 ; To set bugtracker
-web = http://github.com/doherty/%s/issues
-[PodWeaver]
-[InstallGuide]
-[ReadmeFromPod]
-[CopyReadmeFromBuild]
-
-[Git::NextVersion]
-[PkgVersion]
-[NextRelease]
-filename    = CHANGES
-format      = %-9v %{yyyy-MM-dd}d
-[CheckChangesHasContent]
-changelog = CHANGES
-
-[Git::Commit]
-[Git::Tag]
-
-[@TestingMania]
-[LocalInstall]  ; eat our own dogfood
