@@ -2,4 +2,4 @@ use strict;
 use warnings;
 use Test::More tests => 1;
 
-use_ok('Dist::Zilla::Plugin::LocalInstall');
+use_ok('Dist::Zilla::Plugin::InstallRelease');
