@@ -1,17 +1,0 @@
-[@CorePrep]
-
-[Name]
-[Version]
-[Generic / SYNOPSIS]
-[Generic / DESCRIPTION]
-[Generic / METHODS]
-
-[Leftovers]
-
-[Availability]
-[SourceGitHub]
-[BugsAndLimitations]
-:version = 1.102670 ; To read bugtracker properly
-
-[Authors]
-[Legal]
